Przeróbka na dao
# Conflicts:
#	src/main/java/com/casino/java_online_casino/controllers/DashboardController.java